--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -355,6 +355,8 @@ h6 {
 section {
   padding: 60px 0;
   overflow: hidden;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .section-title {
@@ -604,7 +606,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  color: #0563bb;
+  color: #217178;
 }
 
 .portfolio #portfolio-flters li:last-child {
